[package]
name = "globalsearch-benches"
version = "0.1.0"
edition = "2024"
authors = ["Germán Martín Heim <german.martin.heim@gmail.com>"]
license = "MIT"
description = "A benchmark suite for the GlobalSearch-rs crate"
readme = "README.md"
repository = "https://github.com/GermanHeim/globalsearch-benches"
publish = false  

[dependencies]
globalsearch = { path = ".." }
plotly = "0.14.0"
argmin_testfunctions = "0.3.0"
rand = "0.9.2"
ndarray = "0.16.1"
clap = { version = "4.5.56", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
